selector -> toolbox-selector update

--- a/sass/components.scss
+++ b/sass/components.scss
@@ -12,6 +12,6 @@
 @import "components/note.css";
 @import "components/overlays.css";
 @import "components/progress.css";
-@import "components/selector.css";
+@import "components/toolbox-selector.css";
 @import "components/tabs.css";
 @import "components/titles.css";
