--- a/sass/tailwind/animations.scss
+++ b/sass/tailwind/animations.scss
@@ -43,6 +43,34 @@
   animation: multi-color 20s linear infinite;
 }
 
+@keyframes focus-up-down {
+  0%, 100% {
+    transform: translate(0, 0px);
+  }
+  33% {
+    transform: translate(0, -1px);
+  }
+  66% {
+    transform: translate(0, 1px);
+  }
+}
+@keyframes hover-down {
+  0% {
+    transform: translate(0, 0px);
+  }
+  100% {
+    transform: translate(0, 1px);
+  }
+}
+@keyframes hover-up {
+  0% {
+    transform: translate(0, 1px);
+  }
+  100% {
+    transform: translate(0, 0px);
+  }
+}
+
 @keyframes loading {
   0% { background-position: 0 0; }
   100% { background-position: 80px 0; }
