Separator typo fix

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -19,7 +19,7 @@
 
       <a class="breadcrumbs__link" href="#" title="{{item.name}}">{{item.name}}</a>
 
-      <div class="breadcrumbs__seperator">/</div>
+      <div class="breadcrumbs__separator">/</div>
     </div>
   {% endfor %}
 </div>
