--- a/sass/theme-dark.scss
+++ b/sass/theme-dark.scss
@@ -28,7 +28,7 @@ body.theme-dark {
       font-weight: 300;
     }
 
-    .breadcrumbs__seperator {
+    .breadcrumbs__separator {
       color: #FFF;
     }
 
