Renamed button and push to prefixed with toolbox-

--- a/_includes/blocks/extra-options/theme.html
+++ b/_includes/blocks/extra-options/theme.html
@@ -24,11 +24,11 @@
 <script>
   $('.JS_theme_normal').on('click', function() {
     $('.tabs').removeClass('tabs--invert');
-    $('.toolbox-selector, .push, .btn').removeClass('filter-invert');
+    $('.toolbox-selector, .toolbox-push, .toolbox-button').removeClass('filter-invert');
   });
   $('.JS_theme_invert').on('click', function() {
     $('.tabs').addClass('tabs--invert');
-    $('.toolbox-selector, .push, .btn').addClass('filter-invert');
+    $('.toolbox-selector, .toolbox-push, .toolbox-button').addClass('filter-invert');
     $('.JS_extra').removeClass('filter-invert');
   });
 </script>
