--- a/_includes/blocks/item-main/item-main.html
+++ b/_includes/blocks/item-main/item-main.html
@@ -5,8 +5,8 @@
     </div>
 
     <div class="header__actions">
-        {% include components/button.html title="Reject" drop="true"%}
-        {% include components/button.html title="Create" go="true"%}
+        {% include components/toolbox-button.html title="Reject" drop="true"%}
+        {% include components/toolbox-button.html title="Create" go="true"%}
     </div>
   </div>
 </header>
