--- a/sass/components.scss
+++ b/sass/components.scss
@@ -2,7 +2,7 @@
 ---
 
 @import "components/breadcrumbs.css";
-@import "components/buttons.css";
+@import "components/toolbox-button.css";
 @import "components/comment-field.css";
 @import "components/comments.css";
 @import "components/field.css";
