--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.2/tailwind.min.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-extend.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/toolbox-buttons.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/toolbox-button.css">
 </head>
 
 <body style="background-color: #FFF;">
@@ -35,12 +35,12 @@
 
   <section class="my-8 px-1/5 text-center">
     <h3>Components</h3>
-    {% include components/toolbox-push.html href="buttons" title="Buttons" go="true" %}
+    {% include components/toolbox-push.html href="toolbox-buttons" title="Buttons" go="true" %}
     {% include components/toolbox-push.html href="comments" title="<span class='font-normal'></span>Comments" drop="true" smallCaps='true' %}
     {% include components/toolbox-push.html href="inputs" title="Inputs" go="true" %}
-    {% include components/toolbox-push.html href="toolbox-table" title="toolbox-table" go="true" %}
+    {% include components/toolbox-push.html href="toolbox-table" title="Table" go="true" %}
     {% include components/toolbox-push.html href="popups" title="Popups and overlay" go="true" %}
-    {% include components/toolbox-push.html href="toolbox-selectors" title="toolbox-selectors" go="true" %}
+    {% include components/toolbox-push.html href="toolbox-selectors" title="Selectors" go="true" %}
     {% include components/toolbox-push.html href="tabs" title="Tabs" go="true" %}
   </section>
 
