--- a/sass/components/toolbox-button.scss
+++ b/sass/components/toolbox-button.scss
@@ -13,20 +13,29 @@
   padding: 5px 18px;
   border-radius: 9999px;
   text-align: center;
-  transition: all .15s linear;
+  -webkit-transition: all .2s linear, transform .2s ease;
+  transition: all .2s linear, transform .2s ease;
   font-size: 16px;
   background-color: var(--color-platinum);
   color: #000;
   box-shadow: 0 3px 0 #A5A5A5;
   min-height: 28px;
 
+  &:focus {
+    transform: translate(0);
+    animation: focus-2-up-down 0.2s ease forwards;
+  }
   &:hover {
     transform: translatey(2px);
     box-shadow: 0 1px 0 #6C6C6C;
+
+    &:focus {
+      animation: hover-2-down 0.2s ease forwards;
+    }
   }
 
-  &:active, &:focus {
-    transform: translateY(3px);
+  &:active {
+    transform: translateY(2px);
     box-shadow: 0 1px 0 #c5c5c5;
   }
 
