overlay-body -> toolbox-overlay

--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="theme-dark">
-    {% include components/overlay.html %}
+    {% include components/toolbox-overlay.html %}
     {{ content }}
 
     {% include foot.html %}
