--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
 </head>
 
 <body style="background-color: #FFF;">
-  {% include components/overlay.html %}
+  {% include components/toolbox-overlay.html %}
 
   <section class="my-8 px-1/5 text-center">
     <h3>Tracker versions</h3>
