--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    {% include components/overlay.html %}
+    {% include components/toolbox-overlay.html %}
     {{ content }}
 
     {% comment %} POPUPS {% endcomment %}
