--- a/_layouts/toolbox-table.html
+++ b/_layouts/toolbox-table.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="page-{{ page.title }}">
-  {% include components/overlay.html %}
+  {% include components/toolbox-overlay.html %}
 
   {{ content }}
 
