--- a/sass/components.scss
+++ b/sass/components.scss
@@ -10,7 +10,7 @@
 @import "components/toolbox-table.css";
 @import "components/modal.css";
 @import "components/note.css";
-@import "components/overlays.css";
+@import "components/toolbox-overlay.css";
 @import "components/progress.css";
 @import "components/toolbox-selector.css";
 @import "components/tabs.css";
