--- a/_layouts/drag.html
+++ b/_layouts/drag.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="page-{{ page.title }}">
-    {% include components/overlay.html %}
+    {% include components/toolbox-overlay.html %}
     {{ content }}
   </body>
 </html>
