--- a/_layouts/toolbox.html
+++ b/_layouts/toolbox.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}" style="background-color: #FFF;">
-    {% include components/overlay.html %}
+    {% include components/toolbox-overlay.html %}
 
     {{ content }}
 
