--- a/sass/components/toolbox-overlay.scss
+++ b/sass/components/toolbox-overlay.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-.overlay-body {
+.toolbox-overlay {
   background-color: rgba(0,0,0,.25);
   pointer-events: none;
   opacity: 0;
@@ -32,6 +32,16 @@
   &--tooltip {
     // now we use the simple one
     // background-color: rgba(210, 229, 255, 0.4);
+  }
+
+  // this is for the emberJS application, to make sure everything in
+  // the modals are visible and in front of the toolbox-overlay
+  // makes use of a wormhole in the DOM
+  &--modal {
+      width: 0;
+      height: 0;
+      opacity: 1;
+      z-index: 41;
   }
 
 }
