tabs -> toolbox-tabs

--- a/_includes/blocks/item-comments/item-comments.html
+++ b/_includes/blocks/item-comments/item-comments.html
@@ -12,4 +12,4 @@
   {% include blocks/item-comments/item-comments-tab1.html %}
 {% endcapture %}
 
-{% include components/tabs.html tabsNavData=tabsNavData panelData=panelData %}
+{% include components/toolbox-tabs.html tabsNavData=tabsNavData panelData=panelData %}
