--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@
     {% include components/toolbox-push.html href="toolbox-table" title="Table" go="true" %}
     {% include components/toolbox-push.html href="popups" title="Popups and overlay" go="true" %}
     {% include components/toolbox-push.html href="toolbox-selectors" title="Selectors" go="true" %}
-    {% include components/toolbox-push.html href="tabs" title="Tabs" go="true" %}
+    {% include components/toolbox-push.html href="toolbox-tabs" title="Tabs" go="true" %}
   </section>
 
   <section class="my-8 px-1/5 text-center">
