--- a/sass/components.scss
+++ b/sass/components.scss
@@ -13,5 +13,5 @@
 @import "components/toolbox-overlay.css";
 @import "components/progress.css";
 @import "components/toolbox-selector.css";
-@import "components/tabs.css";
+@import "components/toolbox-tabs.css";
 @import "components/titles.css";
