--- a/_includes/blocks/app-nav/app-nav.html
+++ b/_includes/blocks/app-nav/app-nav.html
@@ -8,5 +8,5 @@
     ;&&;
   {% endcapture %}
 
-  {% include components/tabs.html tabsNavData=tabsNavData panelData=panelData invert="true" %}
+  {% include components/toolbox-tabs.html tabsNavData=tabsNavData panelData=panelData invert="true" %}
 </div>
