--- a/_includes/blocks/extra-options/theme.html
+++ b/_includes/blocks/extra-options/theme.html
@@ -23,11 +23,11 @@
 
 <script>
   $('.JS_theme_normal').on('click', function() {
-    $('.tabs').removeClass('tabs--invert');
+    $('.toolbox-tabs').removeClass('toolbox-tabs--invert');
     $('.toolbox-selector, .toolbox-push, .toolbox-button').removeClass('filter-invert');
   });
   $('.JS_theme_invert').on('click', function() {
-    $('.tabs').addClass('tabs--invert');
+    $('.toolbox-tabs').addClass('toolbox-tabs--invert');
     $('.toolbox-selector, .toolbox-push, .toolbox-button').addClass('filter-invert');
     $('.JS_extra').removeClass('filter-invert');
   });
