--- a/_includes/blocks/item-main/item-main.html
+++ b/_includes/blocks/item-main/item-main.html
@@ -20,4 +20,4 @@
   {% include blocks/item-main/item-main-tab3.html %}
 {% endcapture %}
 
-{% include components/tabs.html tabsNavData=tabsNavData panelData=panelData %}
+{% include components/toolbox-tabs.html tabsNavData=tabsNavData panelData=panelData %}
