--- a/_includes/blocks/item-progress/item-progress.html
+++ b/_includes/blocks/item-progress/item-progress.html
@@ -5,4 +5,4 @@
   {% include blocks/item-progress/item-progress-tab2.html %}
 {% endcapture %}
 
-{% include components/tabs.html tabsNavData=tabsNavData panelData=panelData invert="true" %}
+{% include components/toolbox-tabs.html tabsNavData=tabsNavData panelData=panelData invert="true" %}
