--- a/sass/plugins/panels.scss
+++ b/sass/plugins/panels.scss
@@ -4,14 +4,14 @@
 
 .app-navigator {
   left: -50%;
-  .tabs--invert {
-    .tabs-nav__slide--left {
-      .tabs-nav__slideShadow {
+  .toolbox-tabs--invert {
+    .toolbox-tabs-nav__slide--left {
+      .toolbox-tabs-nav__slideShadow {
           background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #91AED4 100%) !important;
       }
     }
-    .tabs-nav__slide--right {
-      .tabs-nav__slideShadow {
+    .toolbox-tabs-nav__slide--right {
+      .toolbox-tabs-nav__slideShadow {
         background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #91AED4 100%) !important;
       }
     }
