modal -> toolbox-modal

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -5,13 +5,13 @@
         <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected">
           <div class="toolbox-selector__block">
           {% if item.prefix  %}
-            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix JS_has-popup JS_breadcrumbPopup" data-popid="#modal-breadcrumb">{{item.prefix}}</div>
+            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix JS_has-popup JS_breadcrumbPopup" data-popid="#toolbox-modal-breadcrumb">{{item.prefix}}</div>
           {% endif %}
           {% if item.field  %}
-            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_has-popup JS_breadcrumbPopup" data-popid="#modal-breadcrumb">{{item.field}}</div>
+            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_has-popup JS_breadcrumbPopup" data-popid="#toolbox-modal-breadcrumb">{{item.field}}</div>
           {% endif %}
           {% if item.label  %}
-            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--label JS_has-popup JS_breadcrumbPopup" data-popid="#modal-breadcrumb">{{item.label}}</div>
+            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--label JS_has-popup JS_breadcrumbPopup" data-popid="#toolbox-modal-breadcrumb">{{item.label}}</div>
           {% endif %}
           </div>
         </div>
