--- a/_includes/blocks/toolbox-table/toolbox-table-inner.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-inner.html
@@ -7,7 +7,7 @@
       <button class="block-action disabled"></button>
       <button class="block-action">Print</button>
       <button class="block-action"></button>
-      <button class="block-action JS_has-popup" data-popid="#modal-columnpicker"></button>
+      <button class="block-action JS_has-popup" data-popid="#toolbox-modal-columnpicker"></button>
     </div>
   </header>
   <div class="toolbox-table__row">
