--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -21,18 +21,18 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/singleselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toolbox-tabs.js"></script>
 
-{% comment %} modal main{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/popup.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/reset.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/modal.js"></script>
+{% comment %} toolbox-modal main{% endcomment %}
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/popup.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/reset.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/toolbox-modal.js"></script>
 
-{% comment %} modal plugins{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/animation.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-calendar.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-colorselector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-columnpicker-options.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/incl-excl-filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/reset-to-default.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/sortable.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/sublist-closer.js"></script>
+{% comment %} toolbox-modal plugins{% endcomment %}
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/animation.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-calendar.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-colorselector.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-columnpicker-options.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/incl-excl-filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/reset-to-default.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/sortable.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/sublist-closer.js"></script>
