--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -1,4 +1,4 @@
-<div class="modal JS_modal--withFilter" id="filter-tagpicker">
+<div class="toolbox-modal JS_toolbox-modal--withFilter" id="filter-tagpicker">
 
   <div class="toolbox-table">
     <div class="toolbox-table__row">
@@ -6,7 +6,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
 
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput" placeholder="search through tags">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput" placeholder="search through tags">
 
           </div>
         </li>
@@ -334,4 +334,4 @@
   {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
