--- a/_includes/popups/popup-copy-clipboard.html
+++ b/_includes/popups/popup-copy-clipboard.html
@@ -1,4 +1,4 @@
-<div class="modal" id="ms-copy-success">
+<div class="toolbox-modal" id="ms-copy-success">
   <div class="toolbox-table">
     <div class="toolbox-table__row">
       <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
@@ -15,7 +15,7 @@
 </div>
 
 
-<div class="modal" id="ms-copy-error">
+<div class="toolbox-modal" id="ms-copy-error">
   <div class="toolbox-table">
     <div class="toolbox-table__row">
       <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
