--- a/_includes/popups/toolbox-modal-columnpicker.html
+++ b/_includes/popups/toolbox-modal-columnpicker.html
@@ -1,11 +1,11 @@
-<div class="modal JS_modal--simpleText JS_modal--textAction JS_modal--resetFunctionality JS_modal--columnpickerOptions" id="modal-columnpicker">
+<div class="toolbox-modal JS_toolbox-modal--simpleText JS_toolbox-modal--textAction JS_toolbox-modal--resetFunctionality JS_toolbox-modal--columnpickerOptions" id="toolbox-modal-columnpicker">
 
   <div class="toolbox-table JS_toolbox-table">
     <div class="toolbox-table__row">
       <ul class="toolbox-table__rowInner">
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput" placeholder="filter through columns">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput" placeholder="filter through columns">
           </div>
         </li>
       </ul>
@@ -136,4 +136,4 @@
     {% comment %} /.toolbox-table {% endcomment %}
   </div>
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
