--- a/_layouts/toolbox-table.html
+++ b/_layouts/toolbox-table.html
@@ -11,9 +11,9 @@
   {{ content }}
 
   {% comment %} POPUPS {% endcomment %}
-  {% include popups/modal-columnpicker.html %}
+  {% include popups/toolbox-modal-columnpicker.html %}
 
-  <div class="modal" id="modal-error">
+  <div class="toolbox-modal" id="toolbox-modal-error">
     <div class="toolbox-table">
       <div class="toolbox-table__row">
         <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
