--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -1,11 +1,11 @@
-<div class="modal JS_modal--withFilter" id="filter-datepicker">
+<div class="toolbox-modal JS_toolbox-modal--withFilter" id="filter-datepicker">
 
   <div class="toolbox-table">
     <div class="toolbox-table__row">
       <ul class="toolbox-table__rowInner">
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput" placeholder="search through dates">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput" placeholder="search through dates">
           </div>
         </li>
       </ul>
@@ -331,4 +331,4 @@
   {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
