--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,4 +1,4 @@
-<div class="modal pin-r w-half-screen JS_semsearch">
+<div class="toolbox-modal pin-r w-half-screen JS_semsearch">
 
   <div class="toolbox-table">
     <div class="toolbox-table__row">
@@ -6,7 +6,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
 
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput" placeholder="search through items">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput" placeholder="search through items">
 
           </div>
         </li>
@@ -72,4 +72,4 @@
   {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
