--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="modal" id="modal-breadcrumb">
+<div class="toolbox-modal" id="toolbox-modal-breadcrumb">
 
   <div class="toolbox-table JS_toolbox-table">
     <div class="toolbox-table__row">
@@ -6,7 +6,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
 
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
 
           </div>
         </li>
@@ -31,4 +31,4 @@
   {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
