--- a/_includes/popups/toolbox-modal-tags-colors.html
+++ b/_includes/popups/toolbox-modal-tags-colors.html
@@ -1,4 +1,4 @@
-<div class="modal JS_modal--withColors" id="modal-tagpicker">
+<div class="toolbox-modal JS_toolbox-modal--withColors" id="toolbox-modal-tagpicker">
 
   <div class="toolbox-table JS_toolbox-table ">
     <div class="toolbox-table__row">
@@ -6,7 +6,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
 
-            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput" placeholder="filter through tags">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_toolbox-modal__filterInput" placeholder="filter through tags">
 
           </div>
         </li>
@@ -118,4 +118,4 @@
   {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
-{% comment %} /.modal {% endcomment %}
+{% comment %} /.toolbox-modal {% endcomment %}
