--- a/sass/components.scss
+++ b/sass/components.scss
@@ -8,7 +8,7 @@
 @import "components/field.css";
 @import "components/headers.css";
 @import "components/toolbox-table.css";
-@import "components/modal.css";
+@import "components/toolbox-modal.css";
 @import "components/note.css";
 @import "components/toolbox-overlay.css";
 @import "components/progress.css";
