note -> toolbox-note

--- a/_includes/popups/popup-copy-clipboard.html
+++ b/_includes/popups/popup-copy-clipboard.html
@@ -4,7 +4,7 @@
       <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
-            <div class="note">
+            <div class="toolbox-note">
               <p>Item details copied to the clipboard.</p>
             </div>
           </div>
@@ -21,7 +21,7 @@
       <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
-            <div class="note note--error">
+            <div class="toolbox-note toolbox-note--error">
               <p>Error while copying to clipboard.</p>
             </div>
           </div>
