--- a/sass/components.scss
+++ b/sass/components.scss
@@ -9,7 +9,7 @@
 @import "components/headers.css";
 @import "components/toolbox-table.css";
 @import "components/toolbox-modal.css";
-@import "components/note.css";
+@import "components/toolbox-note.css";
 @import "components/toolbox-overlay.css";
 @import "components/progress.css";
 @import "components/toolbox-selector.css";
