--- a/_layouts/toolbox-table.html
+++ b/_layouts/toolbox-table.html
@@ -19,7 +19,7 @@
         <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
           <li class="toolbox-table__cell">
             <div class="toolbox-table__cellInner">
-              <div class="note note--error">
+              <div class="toolbox-note toolbox-note--error">
                 <p>Due date must be somewhere in the future.</p>
               </div>
             </div>
