field -> toolbox-field

--- a/_includes/blocks/extra-options/theme.html
+++ b/_includes/blocks/extra-options/theme.html
@@ -1,8 +1,8 @@
 <div class="px-4">
-  <div class="field field--not-empty">
-    <div class="field__label">Theme</div>
-    <div class="field__data">
-      <div class="field__value">
+  <div class="toolbox-field toolbox-field--not-empty">
+    <div class="toolbox-field__label">Theme</div>
+    <div class="toolbox-field__data">
+      <div class="toolbox-field__value">
         <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--expanded toolbox-selector--required JS_toolbox-selector JS_extra">
           <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected JS_toolbox-selectorItem" tabindex='0'>
             <div class="toolbox-selector__block">
