--- a/_includes/blocks/toolbox-table/toolbox-table-editable.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-editable.html
@@ -19,11 +19,11 @@
 
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">header cell 1</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">header cell 1</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -31,11 +31,11 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">header cell 2 with flex-grow-2</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">header cell 2 with flex-grow-2</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          <input class="field__input" type="text" value="Example data">
+          <input class="toolbox-field__input" type="text" value="Example data">
         </div>
       </li>
     </ul>
