--- a/sass/components.scss
+++ b/sass/components.scss
@@ -5,7 +5,7 @@
 @import "components/toolbox-button.css";
 @import "components/comment-field.css";
 @import "components/comments.css";
-@import "components/field.css";
+@import "components/toolbox-field.css";
 @import "components/headers.css";
 @import "components/toolbox-table.css";
 @import "components/toolbox-modal.css";
