--- a/_includes/blocks/toolbox-table/toolbox-table-inner.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-inner.html
@@ -19,11 +19,11 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">Nr</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">Nr</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -31,11 +31,11 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">Title</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">Title</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -43,11 +43,11 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">Assigned to</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">Assigned to</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -55,11 +55,11 @@
       </li>
       <li class="toolbox-table__cell flex-grow-3">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">Reported by customer</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">Reported by customer</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
