--- a/_includes/blocks/toolbox-table/toolbox-table-readonly.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-readonly.html
@@ -30,11 +30,11 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">header cell 1</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">header cell 1</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
@@ -42,11 +42,11 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          <div class="field">
-            <div class="field__label">header cell 2 with flex-grow-2</div>
-            <div class="field__data">
-              <div class="field__value">
-                <input class="field__input" type="text" value="">
+          <div class="toolbox-field">
+            <div class="toolbox-field__label">header cell 2 with flex-grow-2</div>
+            <div class="toolbox-field__data">
+              <div class="toolbox-field__value">
+                <input class="toolbox-field__input" type="text" value="">
               </div>
             </div>
           </div>
