--- a/sass/components/toolbox-table.scss
+++ b/sass/components/toolbox-table.scss
@@ -83,8 +83,8 @@
           padding-bottom: 0px;
         }
 
-        .field {
-          .field__label {
+        .toolbox-field {
+          .toolbox-field__label {
             line-height: normal;
           }
         }
@@ -261,7 +261,7 @@
       z-index: 50;
     }
 
-    input, .field__input {
+    input, .toolbox-field__input {
       width: 100%;
     }
 
