comment -> toolbox-comment

--- a/_includes/blocks/item-comments/item-comments.html
+++ b/_includes/blocks/item-comments/item-comments.html
@@ -1,6 +1,6 @@
-<div class="comment-addNew">
-  <input class="comment-addNew__input" placeholder="use @username to notify">
-  <div class="comment-addNew__actions">
+<div class="toolbox-comment-addNew">
+  <input class="toolbox-comment-addNew__input" placeholder="use @username to notify">
+  <div class="toolbox-comment-addNew__actions">
     <i></i>
     <i></i>
   </div>
